--- a/Notice Board/Base.lproj/Main_iPad.storyboard
+++ b/Notice Board/Base.lproj/Main_iPad.storyboard
@@ -29,7 +29,7 @@
                                         </state>
                                         <connections>
                                             <action selector="checkInOutAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CAX-Qs-oJx"/>
-                                            <segue destination="Kft-N8-3R9" kind="modal" id="Iia-UZ-SjA"/>
+                                            <segue destination="Kft-N8-3R9" kind="push" id="TnS-Dn-f3h"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -125,7 +125,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="419" y="-781"/>
+            <point key="canvasLocation" x="-3719" y="-1557"/>
         </scene>
         <!--Code Reader View Controller-->
         <scene sceneID="3i1-3w-fOe">
@@ -157,6 +157,7 @@
                                 </state>
                                 <connections>
                                     <action selector="predentAction:" destination="Kft-N8-3R9" eventType="touchUpInside" id="ScM-XM-hqZ"/>
+                                    <segue destination="8pn-df-CsH" kind="push" id="mLR-ER-AR8"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -171,7 +172,132 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cup-a7-quI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1700" y="-896"/>
+            <point key="canvasLocation" x="-2438" y="-1672"/>
+        </scene>
+        <!--Task View Controller-->
+        <scene sceneID="9Hi-np-QaE">
+            <objects>
+                <viewController id="8pn-df-CsH" customClass="PITaskViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="y6O-IU-3Gh"/>
+                        <viewControllerLayoutGuide type="bottom" id="ePm-7L-znt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lbe-SZ-eDD">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ppM-Wb-v2Z">
+                                <rect key="frame" x="700" y="86" width="324" height="682"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" tag="2" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cWV-Ls-hEz">
+                                        <rect key="frame" x="0.0" y="0.0" width="324" height="300"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="strCell" textLabel="lPK-6N-HQ5" detailTextLabel="QcN-hE-PCb" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="xJW-ws-WaI">
+                                                <rect key="frame" x="0.0" y="22" width="324" height="60"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xJW-ws-WaI" id="PXL-G2-wZC">
+                                                    <rect key="frame" x="0.0" y="0.0" width="324" height="59"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lPK-6N-HQ5">
+                                                            <rect key="frame" x="15" y="11" width="34" height="22"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="QcN-hE-PCb">
+                                                            <rect key="frame" x="15" y="33" width="43" height="15"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="ppM-Wb-v2Z" id="SUj-6x-eZs"/>
+                                            <outlet property="delegate" destination="ppM-Wb-v2Z" id="Spf-0v-JSB"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OP4-gG-vSp">
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="86"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LongLine_Horizontal.png" translatesAutoresizingMaskIntoConstraints="NO" id="aPM-aN-sFj">
+                                        <rect key="frame" x="0.0" y="84" width="1024" height="2"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LongLine_Vertical.png" translatesAutoresizingMaskIntoConstraints="NO" id="MRJ-Rn-N8v">
+                                <rect key="frame" x="700" y="84" width="1" height="690"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" tag="1" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" sectionIndexMinimumDisplayRowCount="9" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5XX-W3-dO0">
+                                <rect key="frame" x="0.0" y="146" width="700" height="632"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="taskCell" id="TAx-mX-2Pb">
+                                        <rect key="frame" x="0.0" y="22" width="700" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TAx-mX-2Pb" id="pwU-KG-fx3">
+                                            <rect key="frame" x="0.0" y="0.0" width="700" height="49"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Lbe-SZ-eDD" id="d8D-21-5l0"/>
+                                    <outlet property="delegate" destination="Lbe-SZ-eDD" id="b8j-Zw-H0C"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3vs-DG-era">
+                                <rect key="frame" x="0.0" y="86" width="700" height="60"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Task Lists" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhb-rd-MS1">
+                                        <rect key="frame" x="10" y="10" width="680" height="40"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <color key="textColor" white="0.1969092153" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="6Xg-3l-Yef"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="tableViewTasks" destination="5XX-W3-dO0" id="FIN-2y-16M"/>
+                        <outlet property="tableViewUsers" destination="cWV-Ls-hEz" id="fdj-up-7q7"/>
+                        <outlet property="viewMenuBar" destination="OP4-gG-vSp" id="hk5-5d-vk6"/>
+                        <outlet property="viewUsers" destination="ppM-Wb-v2Z" id="PMA-nD-rnh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A9F-By-IqM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1067" y="-1575"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="b7g-Pq-8Te">
@@ -238,7 +364,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3wZ-Sa-Uy7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="475" y="188"/>
+            <point key="canvasLocation" x="-3663" y="-588"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="p6Y-a1-cF7">
@@ -257,11 +383,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dEp-PL-20H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-803" y="-650"/>
+            <point key="canvasLocation" x="-4941" y="-1426"/>
         </scene>
     </scenes>
     <resources>
         <image name="Line1.png" width="1027" height="4"/>
+        <image name="LongLine_Horizontal.png" width="703" height="3"/>
+        <image name="LongLine_Vertical.png" width="3" height="685"/>
         <image name="SampleQRCodeImage.png" width="540" height="540"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
