--- a/Notice Board/Base.lproj/Main_iPad.storyboard
+++ b/Notice Board/Base.lproj/Main_iPad.storyboard
@@ -104,7 +104,11 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="lex-SQ-TsL" appends="YES" id="DR8-Fh-Kga"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="exP-kQ-QV7"/>
                     <nil key="simulatedStatusBarMetrics"/>
@@ -112,6 +116,7 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
+                        <outlet property="btnCheckInOut" destination="DwL-Vh-uG6" id="aIR-dp-NHB"/>
                         <outlet property="lblIn" destination="GIP-sA-hVc" id="xNQ-eN-1Ih"/>
                         <outlet property="lblInTitle" destination="lve-EO-f7a" id="Gly-zH-hjq"/>
                         <outlet property="lblInternetNotAvailable" destination="bhZ-96-I4R" id="3Lm-39-7u7"/>
@@ -124,6 +129,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="lex-SQ-TsL">
+                    <connections>
+                        <segue destination="8pn-df-CsH" kind="push" id="X0Q-KQ-bjF"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-3719" y="-1557"/>
         </scene>
@@ -197,7 +207,7 @@
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
-                                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="strCell" textLabel="lPK-6N-HQ5" detailTextLabel="QcN-hE-PCb" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="xJW-ws-WaI">
+                                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="strCellUsers" textLabel="lPK-6N-HQ5" detailTextLabel="QcN-hE-PCb" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="xJW-ws-WaI">
                                                 <rect key="frame" x="0.0" y="22" width="324" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xJW-ws-WaI" id="PXL-G2-wZC">
@@ -253,7 +263,7 @@
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="taskCell" id="TAx-mX-2Pb">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="strCellTaskView" id="TAx-mX-2Pb">
                                         <rect key="frame" x="0.0" y="22" width="700" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TAx-mX-2Pb" id="pwU-KG-fx3">
@@ -397,4 +407,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="X0Q-KQ-bjF"/>
+    </inferredMetricsTieBreakers>
 </document>
